# BienSoXe

./: .gitignore  README.rst  pyproject.toml  tox.ini
biensoxe/: __init__.py  core.py  utils.py
biensoxe/django/: __init__.py  fields.py
tests/: test_biensoxe.py
