[tool.poetry]
name = "biensoxe"
version = "0.8.4"
description = "Library to parse and validate Vietnamese vehicle plate"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "MIT"
homepage = "https://github.com/sunshine-tech/BienSoXe"
repository = "https://github.com/sunshine-tech/BienSoXe.git"
readme = "README.rst"
classifiers = [
    'Natural Language :: Vietnamese',
    'Intended Audience :: Manufacturing',
    'Operating System :: OS Independent',
    'Topic :: Home Automation',
    'Topic :: Software Development :: Embedded Systems',
    'Topic :: Software Development :: Internationalization',
    'Topic :: Software Development :: Localization',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Framework :: Django :: 2.2',
]


[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.0"
memoprop = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
